@@ -1,16 +1,14 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA256
 
-DIST thinking-sphinx-1.3.16.gem 140288 RMD160 c58839df7d73b1cf8146d8aa60e1f8fcd714a90c SHA1 cf9eed94bdf0895ffb998b47b3f6acc4526026c7 SHA256 bb2b50d0257f7d91a309b200671e2449320c924f204c32f6097eb450cb1a7028
 DIST thinking-sphinx-1.3.20.gem 142336 RMD160 7ac5547e145b541b76039337bc1aaa08a48f97cc SHA1 0a577dd2ca76cc9e93d22fd334a850ac9a308aee SHA256 32389fa7f79708b2ad63b0667904c05dc7e1d93c942397307d429657bcb92624
-EBUILD thinking-sphinx-1.3.16.ebuild 804 RMD160 82d7aa7d66c9547561b54083a3921871c5dd9a2b SHA1 5458e0535740ce56369bf74442cfe6bee5f131e1 SHA256 b95b181c7e8fb8860ce5767de81452f62a21368cfc39484b20cbf257960116da
 EBUILD thinking-sphinx-1.3.20.ebuild 804 RMD160 82d7aa7d66c9547561b54083a3921871c5dd9a2b SHA1 5458e0535740ce56369bf74442cfe6bee5f131e1 SHA256 b95b181c7e8fb8860ce5767de81452f62a21368cfc39484b20cbf257960116da
-MISC ChangeLog 1217 RMD160 a753150d904e041391a8bb59dce8a8ccc0a08c5e SHA1 fab6f065433602fb5b8c7a5126e999b35665feb4 SHA256 da5340a3090ed1c1ce6bdb548d8aead2b8e213b8f7497cdbb6505503364da1a3
+MISC ChangeLog 1324 RMD160 163410a50866ef4f24015524d7ecef43f51fc711 SHA1 4ae33436479d7f6b72a22b076273ba255668212d SHA256 a9b3b0afb9c3814a851e0631c4fa7fdf2c05f661ca9d4be36fed8440f4d5d1f0
 MISC metadata.xml 201 RMD160 bbf7920d9809941fb024d20016dbe2fb9f15ff97 SHA1 e629d21795e99a77bd0a6aded1a153fd12d5b2c5 SHA256 c90b12c6600840878686d4544dbc51d97b0715add76b40d9400415cdef6324ad
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.16 (GNU/Linux)
 
-iF4EAREIAAYFAkyba4wACgkQZihJkut28StqEgD+NJceqSqJCEDDlS9joTxG2Wuo
-r7lo5EQee59Jl/3FhzIA/jgCbPQnBVhpUJG1YqgiRfTOO9Ad/Rty/4wPPiAHkfZ8
-=F6Gn
+iF4EAREIAAYFAk0CG3AACgkQppaJjIURYXLQxAEArNfi7SEUJvFPSUrYBwI/ROXZ
+NtPqXkDukERJ+b5f420BAKqKskKgfcCmEdYJWFj8Ad8hLh7YpnDWdZtlhsXlYDnB
+=YOEE
 -----END PGP SIGNATURE-----
